[metadata]
name = nmse-pkg-kwhitham
version = 0.0.1
author = Kevin Whitham
author_email = kwhitham@lbl.gov
description = Routines to access NMSE 2D perovskite data files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kwhitham/nmse
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approvied :: GNU General PUblic License v3 or later (GPLv3+)
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8.5

[options.packages.find]
where = src
